--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;}
+
 #before_date{
     color:green;
     text-align: center;
@@ -9,3 +12,8 @@
 }
 
 body{background-color: aquamarine;}
+
+img{
+    border-radius: 20px;
+    width: 50%;
+}
