--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{font-family: 'Montserrat', sans-serif;
 }
 
 #after_date{
-    color:chocolate ;
+    color:green ;
     text-align: center;
 }
 
